# proc_macro_api

./: .gitignore  Cargo.toml  README.md
proc_macro_api/: Cargo.toml  README.md  doc.md
proc_macro_api/examples/: doc_tests.rs  tests.rs
proc_macro_api/examples/test_base/: mod.rs
proc_macro_api/proc_macro_api_test_base/: Cargo.toml
proc_macro_api/proc_macro_api_test_base/src/: lib.rs
proc_macro_api/proc_macro_api_tests/: Cargo.toml
proc_macro_api/proc_macro_api_tests/src/: err_sh.rs  lib.rs  nop_err.rs  test_invalid_combination.rs
proc_macro_api/proc_macro_api_tests/tests/: attr_gp.rs  attr_gp_ov.rs  attr_gp_ov_sh.rs  normal.rs  trans.rs
proc_macro_api/src/: __private.rs  err_syn.rs  fmt.rs  lib.rs
proc_macro_api_test_base/: Cargo.toml
proc_macro_api_test_base/src/: lib.rs
proc_macro_api_test_base/tests/: base.rs
proc_macro_api_tests/: Cargo.toml  README.md
proc_macro_api_tests/src/: comp_err.rs  err_gp.rs  err_ov.rs  err_sh.rs  lib.rs  nop_err.rs  playground.rs  test_invalid_combination.rs
proc_macro_api_tests/src/err_attr/: err_ap.rs  err_gp.rs  err_ov.rs  err_sh.rs  mod.rs
proc_macro_api_tests/tests/: attr.rs  attr_gp.rs  attr_gp_ap.rs  attr_gp_ap_ov.rs  attr_gp_ov.rs  attr_gp_ov_sh.rs  normal.rs  playground.rs  trans.rs
proc_macro_api_tests/tests/attr_sub/: attr_gp.rs  attr_gp_ap.rs  attr_gp_ap_ov.rs  attr_gp_ov.rs  mod.rs
