[package]
name = "proc-macro-api"
version = "0.1.0"
edition = "2024"
description = "A macro helping with exporting APIs in a proc_macro library crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BoxCatGarden/proc_macro_api"
readme = "README.md"
keywords = ["macros", "modules", "export", "proc-macro-api"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
publish = false

[dependencies]

[features]
default = ["deny_shadow"]
deny_override = []
deny_shadow = []
deny_group_attr = []
auto_transform = []

[[example]]
name = "doc_tests"
crate-type = ["proc-macro"]
