[package]
name = "proc-macro-api"
version = "0.1.4"
edition = "2024"
description = "A macro helping with exporting APIs in a proc-macro library crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BoxCatGarden/proc_macro_api"
readme = "README.md"
keywords = ["macro", "module", "export", "proc-macro-export"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
publish = true

[dependencies]

[features]
default = ["deny_shadow"]
deny_override = []
deny_append = []
deny_shadow = []
deny_group_attr = []
auto_transform = []

[[example]]
name = "doc_tests"
crate-type = ["proc-macro"]
