[package]
name = "proc-macro-api-tests"
version = "0.2.0"
edition = "2024"
description = "Tests for `proc-macro-api`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BoxCatGarden/proc_macro_api"
readme = "README.md"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
proc-macro-api = { workspace = true }
base = { workspace = true }

[features]
with_default = ["proc-macro-api/default"]
deny_override = ["proc-macro-api/deny_override"]
deny_append = ["proc-macro-api/deny_append"]
deny_shadow = ["proc-macro-api/deny_shadow"]
deny_group_attr = ["proc-macro-api/deny_group_attr"]
auto_transform = ["proc-macro-api/auto_transform"]
non_optional_err = []
err_nonexistent_fn = []
attr_tests = []
comp_err = []
playground = []
# test option
test_playground = ["playground"]
test_normal = []
test_trans = ["auto_transform"]
test_attr = ["attr_tests"]
test_comp_err_nex_fn = ["err_nonexistent_fn", "comp_err"]
test_err_nop = ["non_optional_err"]
test_err_attr_sh = ["deny_shadow", "attr_tests"]
test_err_attr_ov = ["deny_override", "attr_tests"]
test_err_attr_ap = ["deny_append", "attr_tests"]
test_err_attr_gp = ["deny_group_attr", "attr_tests"]
test_err_attr_sh_ov = ["test_err_attr_sh", "test_err_attr_ov"]
test_err_attr_sh_ap = ["test_err_attr_sh", "test_err_attr_ap"]
test_err_attr_sh_gp = ["test_err_attr_sh", "test_err_attr_gp"]
test_err_attr_ov_ap = ["test_err_attr_ov", "test_err_attr_ap"]
test_err_attr_ov_gp = ["test_err_attr_ov", "test_err_attr_gp"]
test_err_attr_ap_gp = ["test_err_attr_ap", "test_err_attr_gp"]
test_err_attr_sh_ov_ap = ["test_err_attr_sh_ov", "test_err_attr_ap"]
test_err_attr_sh_ov_gp = ["test_err_attr_sh_ov", "test_err_attr_gp"]
test_err_attr_sh_ap_gp = ["test_err_attr_sh_ap", "test_err_attr_gp"]
test_err_attr_ov_ap_gp = ["test_err_attr_ov_ap", "test_err_attr_gp"]
test_err_attr_sh_ov_ap_gp = ["test_err_attr_sh_ov_ap", "test_err_attr_gp"]
test_err_default = ["with_default", "attr_tests"]

[[test]]
name = "trans"
required-features = ["auto_transform"]

[[test]]
name = "attr_gp"
required-features = ["attr_tests"]

[[test]]
name = "attr_gp_ap"
required-features = ["attr_tests"]

[[test]]
name = "attr_gp_ap_ov"
required-features = ["attr_tests"]

[[test]]
name = "attr_gp_ov"
required-features = ["attr_tests"]

[[test]]
name = "attr_gp_ov_sh"
required-features = ["attr_tests"]

[[test]]
name = "playground"
required-features = ["playground"]
