[package]
name = "proc-macro-api-tests"
version = "0.2.1"
edition = "2024"
description = "Tests for `proc-macro-api`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BoxCatGarden/proc_macro_api"
readme = "README.md"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
proc-macro-api = { workspace = true }
base = { workspace = true }

[features]
# private features
with_default = ["proc-macro-api/default"]
deny_override = ["proc-macro-api/deny_override"]
deny_append = ["proc-macro-api/deny_append"]
deny_shadow = ["proc-macro-api/deny_shadow"]
deny_group_attr = ["proc-macro-api/deny_group_attr"]
auto_transform = ["proc-macro-api/auto_transform"]
non_optional_err = []
comp_err_nonexistent_fn = []
comp_err_mul_pm_attr = []
attr_tests = []
err_attr_tests = []
comp_err = []
playground = []
# pub test-option features
test_playground = ["playground"]
test_normal = []
test_trans = ["auto_transform"]
test_attr = ["attr_tests"]
test_comp_err_nex_fn = ["comp_err_nonexistent_fn", "comp_err"]
test_comp_err_mul_pm_attr = ["comp_err_mul_pm_attr", "comp_err"]
test_err_nop = ["non_optional_err"]
test_err_attr_none = ["err_attr_tests", "test_attr"]
test_err_attr_sh = ["deny_shadow", "test_err_attr_none"]
test_err_attr_ov = ["deny_override", "test_err_attr_none"]
test_err_attr_ap = ["deny_append", "test_err_attr_none"]
test_err_attr_gp = ["deny_group_attr", "test_err_attr_none"]
test_err_attr_sh_ov = ["test_err_attr_sh", "test_err_attr_ov"]
test_err_attr_sh_ap = ["test_err_attr_sh", "test_err_attr_ap"]
test_err_attr_sh_gp = ["test_err_attr_sh", "test_err_attr_gp"]
test_err_attr_ov_ap = ["test_err_attr_ov", "test_err_attr_ap"]
test_err_attr_ov_gp = ["test_err_attr_ov", "test_err_attr_gp"]
test_err_attr_ap_gp = ["test_err_attr_ap", "test_err_attr_gp"]
test_err_attr_sh_ov_ap = ["test_err_attr_sh_ov", "test_err_attr_ap"]
test_err_attr_sh_ov_gp = ["test_err_attr_sh_ov", "test_err_attr_gp"]
test_err_attr_sh_ap_gp = ["test_err_attr_sh_ap", "test_err_attr_gp"]
test_err_attr_ov_ap_gp = ["test_err_attr_ov_ap", "test_err_attr_gp"]
test_err_attr_sh_ov_ap_gp = ["test_err_attr_sh_ov_ap", "test_err_attr_gp"]
test_err_attr_default = ["with_default", "test_err_attr_none"]

[[test]]
name = "trans"
required-features = ["auto_transform"]

[[test]]
name = "attr"
required-features = ["attr_tests"]

[[test]]
name = "playground"
required-features = ["playground"]
