[package]
name = "proc-macro-api-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro-api = { workspace = true }
base = { version = "0.1", path = "../proc_macro_api_test_base", package = "proc-macro-api-test-base" }

[features]
with_default = ["proc-macro-api/default"]
deny_override = ["proc-macro-api/deny_override"]
deny_shadow = ["proc-macro-api/deny_shadow"]
deny_group_attr = ["proc-macro-api/deny_group_attr"]
auto_transform = ["proc-macro-api/auto_transform"]
allow_override = []
allow_shadow = []
allow_group_attr = []
non_optional_err = []

[[test]]
name = "trans"
required-features = ["auto_transform"]

[[test]]
name = "attr_gp"
required-features = ["allow_group_attr"]

[[test]]
name = "attr_gp_ov"
required-features = ["allow_group_attr", "allow_override"]

[[test]]
name = "attr_gp_ov_sh"
required-features = ["allow_group_attr", "allow_override", "allow_shadow"]
